Added @Security BearerAuth and //	@Param token header string false 'Temporary JWT token for access' where the JWT is not mandatory
