# be/api/grouphandler.go
@@ -17,10 +17,10 @@ import (
 // @Produce json
 // @Param search query string false "Search term to filter groups by name"
 // @Param order_by query string false "Field to order the results by"
-// @Param Authorization header string true "Bearer {token}"
 // @Success 200 {array} map[string]interface{}
 // @Failure 401 {object} ErrorResponse "Unauthorized"
 // @Failure 500 {object} ErrorResponse "Internal Server Error"
+// @Security BearerAuth
 // @Router /groups [get]
 func GetAllGroupsHandler(w http.ResponseWriter, r *http.Request) {
 	searchBy := r.URL.Query().Get("search")
@@ -75,12 +75,12 @@ func GetAllGroupsHandler(w http.ResponseWriter, r *http.Request) {
 // @Tags groups
 // @Produce json
 // @Param id path string true "Group ID"
-// @Param Authorization header string true "Bearer {token}"
 // @Success 200 {object} map[string]interface{}
 // @Failure 400 {object} ErrorResponse "Bad Request"
 // @Failure 401 {object} ErrorResponse "Unauthorized"
 // @Failure 404 {object} ErrorResponse "Group Not Found"
 // @Failure 500 {object} ErrorResponse "Internal Server Error"
+// @Security BearerAuth
 // @Router /groups/{id} [get]
 func GetGroupHandler(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
@@ -158,12 +158,12 @@ func GetGroupHandler(w http.ResponseWriter, r *http.Request) {
 // @Accept json
 // @Produce json
 // @Param group body object true "Group details"
-// @Param Authorization header string true "Bearer {token}"
 // @Success 201 {object} map[string]interface{}
 // @Failure 400 {object} ErrorResponse "Bad Request"
 // @Failure 401 {object} ErrorResponse "Unauthorized"
 // @Failure 409 {object} ErrorResponse "Group Already Exists"
 // @Failure 500 {object} ErrorResponse "Internal Server Error"
+// @Security BearerAuth
 // @Router /groups [post]
 func CreateGroupHandler(w http.ResponseWriter, r *http.Request) {
 	var req struct {
@@ -236,12 +236,12 @@ func CreateGroupHandler(w http.ResponseWriter, r *http.Request) {
 // @Produce json
 // @Param id path string true "Group ID"
 // @Param group body object true "Group details"
-// @Param Authorization header string true "Bearer {token}"
 // @Success 200 {object} map[string]interface{}
 // @Failure 400 {object} ErrorResponse "Bad Request"
 // @Failure 401 {object} ErrorResponse "Unauthorized"
 // @Failure 404 {object} ErrorResponse "Group Not Found"
 // @Failure 500 {object} ErrorResponse "Internal Server Error"
+// @Security BearerAuth
 // @Router /groups/{id} [put]
 func UpdateGroupHandler(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
@@ -311,12 +311,12 @@ func UpdateGroupHandler(w http.ResponseWriter, r *http.Request) {
 // @Description Delete a group by its ID
 // @Tags groups
 // @Param id path string true "Group ID"
-// @Param Authorization header string true "Bearer {token}"
 // @Success 204 "No Content"
 // @Failure 400 {object} ErrorResponse "Bad Request"
 // @Failure 401 {object} ErrorResponse "Unauthorized"
 // @Failure 403 {object} ErrorResponse "Forbidden"
 // @Failure 500 {object} ErrorResponse "Internal Server Error"
+// @Security BearerAuth
 // @Router /groups/{id} [delete]
 func DeleteGroupHandler(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
